set reference to app-done.js

--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
 	
 	<script type="text/javascript" src="jquery.js"></script>
 	<script type="text/javascript" src="spectrum.js"></script>
-	<script type="text/javascript" src="app-events.js"></script>
+	<script type="text/javascript" src="app-done.js"></script>
 </body>
 </html>
