change hover state

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body class='ns'>
 	<div class='head cf'>
-        <a id='logo' href='http://briangrinstead.com/colorstash/'><h1>ColorStash <em>Mini</em></h1></a>
+        <a id='logo' href='http://briangrinstead.com/colorstash/'><h1>ColorStash Mini</h1></a>
 	</div>
     <div class='container cf'>
         <div id='colorpicker-container'>   
