--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <input id='color' />
                 <br />
                 <button id='set-color'>Set</button>
-                <button id='get-random-color'>Random</button>
+                <button id='get-random-color'>Predict Favorite Color</button>
             </div>
         </div>
     </div>
