--- a/index.html
+++ b/index.html
@@ -2,20 +2,33 @@
 <html>
 <head><meta charset="utf-8">
 <title>ColorStash</title>
-<meta name="viewport" content="width=480">
-<link rel="stylesheet" type="text/css" href="styles.css">
+
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+<link rel="stylesheet" type="text/css" href="css/styles.css" />
+<link rel="stylesheet" type="text/css" href="css/spectrum.css" />
 <link rel="icon" type="image/png" href="colorstash.png">
 </head>
 
 <body class='ns'>
 	<div class='head cf'>
-        <a id='logo' href='http://briangrinstead.com/colorstash/'><h1>ColorStash Mini</h1></a>
+        <a id='logo' href='http://briangrinstead.com/colorstash/'></a><h1>ColorStash</h1></a>
+
+        <img src='img/colorstash.png' />
 	</div>
-    <div class='container cf'>
-        <div id='colorpicker-container'>   
+
+    <div class="container">
+
+        <div class="colorpicker-container">
             <input id='spec' />
         </div>
-        
+
+
+    </div> <!-- /container -->
+
+    <div class='container cf'>
+        <div id='colorpicker-container'>
+        </div>
+
         <div id='input-container'>
             <div>
                 <h2>Enter a color</h2>
@@ -26,9 +39,9 @@
             </div>
         </div>
     </div>
-	
-	<script type="text/javascript" src="jquery.js"></script>
-	<script type="text/javascript" src="spectrum.js"></script>
-	<script type="text/javascript" src="app.js"></script>
+
+	<script type="text/javascript" src="js/jquery-1.9.1.js"></script>
+	<script type="text/javascript" src="js/spectrum.js"></script>
+	<script type="text/javascript" src="js/app.js"></script>
 </body>
 </html>
