--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
 	<div class='head cf'>
         <a id='logo' href='http://briangrinstead.com/colorstash/'></a><h1>ColorStash</h1></a>
 
-        <img src='img/colorstash.png' />
+        <img src='img/colorstash.png' width='30' />
 	</div>
+    <div class='btn-container'>
 
+        <a class='btn btn-link' href='https://github.com/bgrins/ColorStashMini/'>View Project on Github</a>
+        <a class='btn btn-primary' href='https://github.com/bgrins/ColorStashMini/archive/master.zip'>Download Code As Zip</a>
+    </div>
     <div class="container">
 
         <div class="colorpicker-container">
@@ -26,8 +30,6 @@
     </div> <!-- /container -->
 
     <div class='container cf'>
-        <div id='colorpicker-container'>
-        </div>
 
         <div id='input-container'>
             <div>
